Fix spacing on links bar [WEB-3201]

--- a/frontend/scss/molecules/_m-links-block.scss
+++ b/frontend/scss/molecules/_m-links-block.scss
@@ -5,7 +5,7 @@
   align-items: center;
   margin-top: 32px;
   margin-bottom: 80px;
-  padding-top: 18px;
+  padding-top: 10px;
   padding-bottom: 18px;
   border-top: 1px solid $color__input-border;
   border-bottom: 1px solid $color__input-border;
